--- a/index.html
+++ b/index.html
@@ -11,9 +11,50 @@
 <title>BootStrap Portfolio</title>
 </head>
 
-    <body>
+    <body class="bg-primary bg-light">
+        <div class="container">
 
-        <h1>hello world</h1>
+            <div class="row bg-white">
+                <div class="col">
+                    <h1 class="text-center pb-5 pt-2 fw-bold">Jerome Caruso</h1>
+                </div>
+            </div>
+            <div class="row">
+                    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                        <div class="container-fluid">
+                          <a class="navbar-brand" href="#">Coding Temple</a>
+                          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                          </button>
+                          <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                              <li class="nav-item">
+                                <a class="nav-link" href="#">Learn HTML</a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link" href="#">Learn CSS</a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link" href="#">Otherpage </a>
+                              </li>
+                            </ul>
+                            <ul class="navbar-nav ms-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Link</a>
+                                </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </nav>
+            </div>
+
+
+
+        </div>
+
+        
+
+        
 
 
 
