--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <div class="card-body">
                             <h5 class="card-title">TITLE HEADING</h5>
                             <h6 class="card-subtitle my-4">Title and Description: September, 16th 2021</h6>
-                            <img src="https://via.placeholder.com/500x100" class="card-img-top" alt="...">
+                            <img src="https://via.placeholder.com/500x100" class="card-img" alt="...">
                             <p class="card-text mt-3">Some text...</p>
                             <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam minima, cupiditate, numquam molestias facilis nemo perspiciatis. consequatur ab.</p>
                         </div>
@@ -62,14 +62,34 @@
                         <div class="card-body">
                             <h5 class="card-title">TITLE HEADING</h5>
                             <h6 class="card-subtitle my-4">Title and Description: September, 16th 2021</h6>
-                            <img src="https://via.placeholder.com/500x100" class="card-img-top" alt="...">
+                            <img src="https://via.placeholder.com/500x100" class="card-img" alt="...">
                             <p class="card-text mt-3">Some text...</p>
                             <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam minima, cupiditate, numquam molestias facilis nemo perspiciatis. consequatur ab.</p>
                         </div>
                       </div>
                 </div>
                 <div class="col-12 col-lg-4 order-0 order-lg-1">
-                    rightside
+                    <div class="card mt-3" >
+                        <div class="card-body">
+                            <h5 class="card-title">ME</h5>
+                            <img src="https://via.placeholder.com/500x100" class="card-img" alt="...">
+                            <p class="card-text">Some text about me ....!</p>
+                        </div>
+                    </div>
+                    <div class="card mt-3" >
+                        <div class="card-body">
+                            <h5 class="card-title">Interesting Things</h5>
+                            <img src="https://via.placeholder.com/500x100" class="card-img" alt="...">
+                            <img src="https://via.placeholder.com/500x100" class="card-img" alt="...">
+                            <img src="https://via.placeholder.com/500x100" class="card-img" alt="...">
+                        </div>
+                    </div>
+                    <div class="card mt-3" >
+                        <div class="card-body">
+                            <h5 class="card-title">Follow Me</h5>
+                            <p class="card-text">Some links ....!</p>
+                        </div>
+                    </div>
                 </div>
             </div>
 
